<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.retrytech.ledgeapp.viewmodel.CategoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_theme_blue"
        android:orientation="vertical"
        android:paddingTop="92dp"
        tools:context=".fragments.CategoryFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_all"
                style="@style/TextViewLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/poppins_medium"
                android:onClick="@{()->model.setSelectedType(0)}"
                android:paddingVertical="7dp"
                android:text="@string/all"
                android:textColor="@{model.selected==0?@color/color_text_primary:@color/color_text_secondary}"
                android:textSize="@dimen/ts_15"

                />

            <TextView

                android:id="@+id/tv_simple"
                style="@style/TextViewLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/poppins_medium"

                android:onClick="@{()->model.setSelectedType(1)}"
                android:paddingVertical="7dp"
                android:text="@string/simple"
                android:textColor="@{model.selected==1?@color/color_text_primary:@color/color_text_secondary}"
                android:textSize="@dimen/ts_15"

                />

            <TextView
                android:id="@+id/tv_Live"
                style="@style/TextViewLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"

                android:fontFamily="@font/poppins_medium"
                android:onClick="@{()->model.setSelectedType(2)}"
                android:paddingVertical="7dp"
                android:text="@string/live"
                android:textColor="@{model.selected==2?@color/color_text_primary:@color/color_text_secondary}"
                android:textSize="@dimen/ts_15"

                />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adapter="@{model.categoryAdapter}"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_category">

                </androidx.recyclerview.widget.RecyclerView>

                <View

                    android:layout_width="0dp"
                    android:layout_height="100dp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>
