<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.retrytech.ledgeapp.viewmodel.PremiumViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_theme_blue"
        android:paddingTop="92dp"
        tools:context=".fragments.PremiumFragment">

        <LinearLayout
            android:id="@+id/lout_premium_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_purple_gradient_500"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="14dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_premium_crown"
                app:tint="@color/color_text_primary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/premium_wallpapers"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/ts_16" />

                <TextView
                    style="@style/TextViewLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/premium_wallpapers_subtitle"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/ts_12" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_image_by_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lout_premium_header"
            android:layout_above="@id/progress_load_more"
            android:adapter="@{model.wallpaperAdapter}"
            android:clipToPadding="false"
            android:paddingBottom="100dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="6"
            tools:listitem="@layout/item_home_image_by_cat" />

        <ProgressBar
            android:id="@+id/progress_load_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:indeterminateTint="@color/color_theme_purple_dark"
            android:visibility="gone" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/sihmmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <include layout="@layout/shimmer_home" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/lout_no_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_premium_crown"
                app:tint="@color/white_30" />

            <TextView
                style="@style/TextViewLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/no_premium_wallpapers"
                android:textColor="@color/white_30"
                android:textSize="@dimen/ts_20" />
        </LinearLayout>
    </RelativeLayout>

</layout>
